# rajoybot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.alpine  Dockerfile.armv8  README.md  bot.py  build.sh  convert.sh  docker-compose.yml  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: codeql.yml  docker.yml  test.yml
app/: PrettyUptime.py  __init__.py  bot.py  config.py  data.json  logger.py  pretty_uptime.py  webhook.py
app/persistence/: __init__.py  loggerfactory.py  tools.py
influxdb/: influxdb.conf
tests/: __init__.py  conftest.py  test_bot.py  test_config.py  test_persistence.py  test_pretty_uptime.py  test_search.py
